<resources>
    <string name="app_name">My Collections</string>
    <string-array name="menu_array">
        <item>Mis colecciones</item>
        <item>Mercado</item>
        <item>Foro</item>
        <item>Tablón de anuncios</item>
        <item>Acceder</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_nueva_coleccion">Nueva colección</string>
    <string name="menu_share">Compartir</string>

    <string name="hello_world">Hola Mundo!</string>
    <string name="action_settings">Opciones</string>
    <string name="email">Email</string>
    <string name="passowrd">Contraseña</string>
    <string name="login">ACCEDER</string>
    <string name="loginGoogle">ACCEDER USANDO GOOGLE +</string>
    <string name="show_pwd">Mostrar Contraseña</string>
    <string name="hide_pwd">Ocultar Contraseña</string>
    <string name="forgot">He olvidado mi contraseña!!</string>
    <string name="closebutton">ke dise</string>
    <string name="newUser">Aún no eres miembro? Registrate!.</string>
    <string name="fullName">Nombre</string>
    <string name="mobileNumber">Teléfono</string>
    <string name="location">Localidad</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="terms_conditions">Al marcar esta casilla acepto los terminos y condiciones de uso.</string>
    <string name="signUp">REGISTRARSE</string>
    <string name="signUpGoogle">REGISTRARSE USANDO GOOGLE +</string>
    <string name="already_user">Ya eres miembro? Accede desde aqui.</string>
    <string name="registered_emailid">Por favor, introduce un email válido:</string>
    <string name="submit">ENTRAR</string>
    <string name="back">ATRÁS</string>

    <string name="descripc_img_forgottenpassword">imagen descriptiva</string>
    <string name="txt_olvido_su_clave">¿Olvidó su contraseña?</string>
    <string name="txt_email">Introduce debajo tu e-mail y recibirás una nueva contraseña</string>
    <string name="txt_hint_clave">Introduce e-mail</string>
    <string name="txt_enviar_btn">Enviar</string>
    <string name="guardar_btn">Guardar</string>
    <string name="editar_btn">EDITAR</string>
    <string name="borrar_btn">BORRAR</string>
    <string name="txt_nombre_coleccion">Nombre Colección:</string>
    <string name="txt_hint_nombCol">Nombre Colección</string>
    <string name="txt_elems_totales_undef">Indefinido</string>
    <string name="txt_elems_totales_def">Limitado</string>
    <string name="txt_num_elems_colecc">Nº elementos:</string>
    <string name="txt_elems_totales">Total:</string>
    <string name="num_elems_totales">Introduzca un nº</string>
    <string name="img_foto_articulo_A">cromos</string>
    <string name="img_foto_articulo_B">sellos</string>
    <string name="txt_nombre_art_A">Nobre del artículo:</string>
    <string name="hint_nombre_art_A">Nombre del artículo</string>
    <string name="txt_descripc_art_A">Añade descripción:</string>
    <string name="hint_descripc_art_A">Descripción...</string>
    <string name="txt_precio_art_A">Añade un precio:</string>
    <string name="hint_precio_art_A">Precio</string>

    <string name="perfil_usuario">Perfil Usuario</string>
    <string name="nombre_usuario">Nombre:</string>
    <string name="descripcion_imagen">Imagen de Usuario</string>
    <string name="accion_cancelar">Cancelar</string>
    <string name="accion_aceptar">Aceptar</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_correo">E-Mail</string>
    <string name="hint_localidad">Localidad</string>
    <string name="hint_coleccionistaDe">Coleccionista de …</string>
    <string name="googleAccess">Acceder con tu cuenta de google.</string>
    <string name="lie">MENTIRA</string>
    <string name="validation1">Introduce un correo electrónico válido</string>
    <string name="validation2">Introduce una contraseña</string>
    <string name="validation3">Las contraseñas no coinciden</string>
    <string name="forgotPAssword">HE OLVIDADO MI CONTRASEÑA</string>
    <string name="validation4">Introduce tus credenciales.</string>
    <string name="validation5">Introduce una dirección de email correcta.</string>
    <string name="buscador">buscador</string>
    <string name="publicar">Publicar</string>
    <string name="precio">Precio:</string>

    <string name="name">org.jrzdy.master.mycollections.name</string>
    <string name="telefono">org.jrzdy.master.mycollections.telefono</string>
    <string name="Email">org.jrzdy.master.mycollections.Email</string>
    <string name="direccion">org.jrzdy.master.mycollections.direccion</string>

    <string name="mis_colecciones">Mis colecciones</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_main">Mis Colecciones</string>
    <string name="title_market">Mercado</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="transition_name_camara">transition:IMG</string>
    <string name="transition_name_horse">transition:HORSE</string>
    <string name="favs">Añadir a favoritos</string>
    <string name="user_header">Usuario</string>

</resources>
