<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/buscador"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/buscador"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/misColecciones"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/mis_colecciones"
        app:showAsAction="ifRoom"
        android:onClick="misColecciones"/>

    <item
        android:id="@+id/nuevaColeccion"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/publicar"
        android:onClick="nuevaColeccion"
        app:showAsAction="always"/>
</menu>
