<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_LinLay_art_A"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/id_ScrVw_art_A"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/id_LinLay_2_art_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margen_contorno">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSecondary"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/titulocolecceditart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="cromos"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <ImageView
                    android:id="@+id/id_img_art_A"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/white"
                    android:contentDescription="fotoarticulo"
                    app:srcCompat="@drawable/web_cab_circulo" />

                <TableLayout
                    android:id="@+id/TbLay_art_A"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical">

                    <TableRow
                        android:id="@+id/id_TbRow_1_art_A"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal">

                        <Space
                            android:layout_width="190dp"
                            android:layout_height="70dp" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/camara"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:transitionName ="@string/transition_name_camara"
                            app:backgroundTint="@color/colorSecondary"
                            app:srcCompat="@android:drawable/ic_menu_camera" />

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="70dp" />

                    </TableRow>

                </TableLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_art_A"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nombre_nuevo_articulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_nombre_art_A"
                android:inputType="none|textPersonName"
                android:selectAllOnFocus="false"
                android:textColorHint="@color/colorSecondary" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numeric="decimal"
                android:text="@string/txt_precio_art_A"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/precio_nuevo_articulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_precio_art_A"
                android:inputType="none|numberDecimal"
                android:textColorHint="@color/colorSecondary" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_descripc_art_A"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/descripc_nuevo_articulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_descripc_art_A"
                android:inputType="none|textMultiLine"
                android:textColorHint="@color/colorSecondary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/guardar_nuevo_articulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:focusableInTouchMode="true"
                android:text="@string/guardar_btn"
                android:textColor="@color/colorPrimaryDark" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>